force-app/main/default/objects/ComercialPolicy__c/ComercialPolicy__c.object-meta.xml
<CustomObject>
    <label>Politicia Comercial</label>
    <nameField>
        <label>Politicia Comercial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Politicas Comerciais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>