force-app/main/default/objects/ComercialPolicy__c/fields/Comission__c.field-meta.xml
<CustomField>
    <fullName>Comission__c</fullName>
    <label>Comissão</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>