force-app/main/default/objects/ComercialPolicy__c/fields/CustomerCategory__c.field-meta.xml
<CustomField>
    <fullName>CustomerCategory__c</fullName>
    <label>Categoria Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerGroup</valueSetName>
    </valueSet>
</CustomField>