force-app/main/default/objects/ComercialPolicy__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Politicas Comerciais</relationshipLabel>
    <relationshipName>Politicas_Comerciais</relationshipName>
    <type>Lookup</type>
</CustomField>