force-app/main/default/objects/ComercialPolicy__c/fields/Initial__c.field-meta.xml
<CustomField>
    <fullName>Initial__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Faixa Inicio (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>