force-app/main/default/objects/ComercialPolicy__c/fields/UserCategory__c.field-meta.xml
<CustomField>
    <fullName>UserCategory__c</fullName>
    <label>Categoria Usuario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendedor</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>